# floppa2

./: Cargo.toml
examples/: game_of_life.rs  pong.rs
src/: lib.rs  pipeline.rs  renderer.rs
src/renderer/: device.rs  instances.rs  mod.rs  pipeline.rs  shader.wgsl  sprite.rs  texture_ref.rs  uniform.rs
src/renderer/render_thread/: gpu.rs  mod.rs  pipeline.rs  shader.wgsl  textures.rs
src/renderer/render_thread/buffers/: instances.rs  mod.rs  uniform.rs
src/renderer_ext/: mod.rs
