[package]
name = "floppa2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = "0.17.1"
raw-window-handle = "0.5"
pollster = "0.3"
bytemuck = {version = "1.14.0", features = ["derive"]}
cgmath = "0.18.0"
lazy_static = "1.1.1"
image = "0.24.7"

[dev-dependencies]
winit = "0.28.7"
rand = "0.8.5"